# sentry-gamemaker

./: .gitignore  CMakeLists.txt  CODE_STRUCTURE.md  Makefile  README.md
demo/SentryGameMaker/: SentryGameMaker.yyp
demo/SentryGameMaker/extensions/Sentry/: Sentry.yy  sentry.gml
demo/SentryGameMaker/extensions/sentry_gamemaker/: sentry_gamemaker.yy
demo/SentryGameMaker/folders/: Scripts.yy
demo/SentryGameMaker/notes/LINK_TO_TUTORIALS/: LINK_TO_TUTORIALS.yy
demo/SentryGameMaker/objects/GameController/: GameController.yy  Other_2.gml  Step_0.gml
demo/SentryGameMaker/objects/obj_asteroid/: Create_0.gml
demo/SentryGameMaker/objects/obj_bomb/: Collision_obj_asteroid.gml  Create_0.gml  Draw_0.gml  Other_0.gml  Step_0.gml  obj_bomb.yy
demo/SentryGameMaker/objects/obj_bullet/: Collision_obj_asteroid.gml
demo/SentryGameMaker/objects/obj_debris/: Create_0.gml
demo/SentryGameMaker/objects/obj_explosion/: Alarm_0.gml  Create_0.gml  Draw_0.gml  obj_explosion.yy
demo/SentryGameMaker/objects/obj_player/: Collision_obj_asteroid.gml  Create_0.gml  Draw_64.gml  Step_0.gml  obj_player.yy
demo/SentryGameMaker/options/extensions/: Sentry.json
demo/SentryGameMaker/rooms/rm_game/: rm_game.yy
demo/SentryGameMaker/sprites/spr_bg/: spr_bg.yy
demo/SentryGameMaker/sprites/spr_bomb/: spr_bomb.yy
demo/SentryGameMaker/sprites/spr_bullet/: spr_bullet.yy
demo/SentryGameMaker/sprites/spr_debris/: spr_debris.yy
demo/SentryGameMaker/sprites/spr_rock_big/: spr_rock_big.yy
demo/SentryGameMaker/sprites/spr_rock_small/: spr_rock_small.yy
demo/SentryGameMaker/sprites/spr_rock_tiny/: spr_rock_tiny.yy
demo/SentryGameMaker/sprites/spr_ship/: spr_ship.yy
demo/Space Rocks/: Space Rocks.yyp
demo/Space Rocks/objects/GameController/: GameController.yy
demo/Space Rocks/objects/obj_asteroid/: obj_asteroid.yy
demo/Space Rocks/objects/obj_player/: Step_0.gml
demo/Space Rocks/options/mac/: options_mac.yy
demo/Space Rocks/options/main/: options_main.yy
demo/Space Rocks/rooms/rm_game/: rm_game.yy
docs/: development_plan.md  phase_1.md  plan.md
extension/Sentry/: Sentry.yy  crashpad_handler
extension/Sentry/scripts/sentry_exception_handler/: sentry_exception_handler.gml
scripts/: generate_manifest.sh  sync-from-demo.sh
sentry-gamemaker/: sentry-gamemaker.yyp
sentry-gamemaker/extensions/sentry_gamemaker/: metadata.json  sentry_gamemaker.yy
sentry-gamemaker/options/mac/: options_mac.yy
sentry-gamemaker/options/main/: options_main.yy
src/: main.cpp  sentry_gm.cpp
src/extensions/Sentry/: Sentry.yy  sentry.gml
src/extensions/sentry_gamemaker/: sentry_exception_handler.gml
src/options/extensions/: Sentry.json  sentry_gamemaker.json
src/sentry-native/lib/cmake/sentry/: sentry-config.cmake  sentry_crashpad-targets.cmake
src/sentry-native/lib/libsentry.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libsentry.dylib.yml
